# modern-cmake

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  README.md  SUMMARY.md  book.json
chapters/: basics.md  exporting.md  features.md  installing.md  options.md  projects.md  running.md  smallinc.md  structure.md  testing.md
chapters/basics/: comms.md  example.md  functions.md  programs.md  structure.md  variables.md
chapters/features/: cpp11.md  debug.md  ides.md  modules.md  small.md  utilities.md
chapters/install/: exporting.md  installing.md  packaging.md
chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
chapters/projects/: download.md  fetch.md  submodule.md
chapters/testing/: catch.md  googletest.md
examples/: CMakeLists.txt
examples/extended-project/: CMakeLists.txt
examples/extended-project/tests/: CMakeLists.txt
examples/fetch/: CMakeLists.txt
examples/root-dict/: CMakeLists.txt  DictExample.cxx  DictExample.h  README.md
examples/root-example/: CMakeLists.txt
examples/root-example-dict/: CMakeLists.txt  CheckLoad.C  MyExample.cxx  SimpleLinkDef.h
examples/root-simple/: CMakeLists.txt  SimpleExample.cxx
examples/root-simple-3.11/: CMakeLists.txt
examples/root-usefile/: CMakeLists.txt
examples/simple-project/: CMakeLists.txt
specifics/: MPI.md  OpenMP.md  ROOT.md
